W04 home contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,7 @@ aside h2 {
     position: absolute;
     top: 67%;
     left: 23.5%;
-    color: beige
+    color: lightgreen;
 }
 
 aside img {
